@startuml
title US13 - Domain Model
hide circle
hide methods
skinparam classAttributeIconSize 0

class DGSAdministrator {
    - name
    - email
}

abstract class VaccinationCenter {
    - name
    - postalAddress
    - phone
    - email
    - website
    - maxVaccinesPerHour
    - openingHours
    - closingHours
}

class HealthcareCenter
class CommunityMassVaccinationCenter

VaccinationCenter <|-- HealthcareCenter
VaccinationCenter <|-- CommunityMassVaccinationCenter

class VaccineType {
    - disease
    - shortDescription
}


DGSAdministrator "1" -- "0..*" VaccinationCenter : registers >

CommunityMassVaccinationCenter "1" -- "1..*" VaccineType : administers >

VaccinationCenter "1" -- "0..*" VaccineType : supports >

@enduml